--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,7 +15,8 @@ book:
     - references.qmd
 
   page-footer: 
-    left: "Copyright 2023, Konstantinos I. Bougioukas" 
+    right: "Built with [Quarto](https://quarto.org/)^®^"
+    left: "&copy; Copyright 2024, Konstantinos I. Bougioukas. License: [Creative Commons Attribution-NonCommercial-NoDerivs 4.0](https://creativecommons.org/licenses/by-nc-nd/4.0/)."
   back-to-top-navigation: true
 
 bibliography: references.bib
