--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,7 @@ book:
     - part: "Statistical Thinking"
       chapters:
         - intro.qmd
+        - descriptive.qmd
     - part: "Jamovi LAB"
       chapters:
         - lab1.qmd
