--- a/_quarto.yml
+++ b/_quarto.yml
@@ -22,6 +22,7 @@ book:
         - lab4.qmd
         - lab6.qmd
         - lab7.qmd
+        - lab9.qmd
         - lab10.qmd
         - data.qmd
         - presentations.qmd
